[package]
name = "rayon_adaptive"
version = "0.1.0"
authors = ["frederic wagner <frederic.wagner@imag.fr>"]
edition = "2018"

[dev-dependencies]
criterion="*"

[profile.release]
debug = true

[features]
# enable this to log using rayon_logs
logs = ["rayon_logs"]

[dependencies]
rayon_logs={optional=true, git="https://github.com/wagnerf42/rayon-logs"}
derive-divisible={path="/home/wagnerf/code/derive-divisible"}
# derive-divisible={git="https://github.com/wagnerf42/derive-divisible", branch="new_api"}
rayon="*"
rayon-core ="*"
itertools="*"
rand="*"
time = "0.1"
smallvec = "*"
hwloc = "*"
libc = "*"
crossbeam = "*"
either = "*"

[[bench]]
name = "all"
harness = false
