[package]
name = "rayon_adaptive"
version = "0.1.0"
authors = ["frederic wagner <frederic.wagner@univ-grenoble-alpes.fr>"]
edition = "2018"

[features]
# enable this to log using rayon_logs
logs = ["rayon_logs"]

[profile.release]
debug = true

[dependencies]
rayon = "*"
crossbeam = "*"
#rayon_logs={optional=true, path="../rayon-logs"}
rayon_logs={optional=true, git="https://github.com/wagnerf42/rayon-logs"}
either = "*"
rand_chacha="*"
rand="*"
itertools="*"

[dev_dependencies]
criterion="*"
thread_binder="*"

[[bench]]
name = "merge_policy"
harness = false
